# qr-foundry-app

./: .env.preview  .env.production  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  qr-forge-spec.md  qr-foundry-spec.md  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE.md
.github/workflows/: ci.yml  deploy-web.yml
docs/: ios-mobile-support-plan.md
scripts/: generate-icons.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: batch.rs  export.rs  validate.rs
src-tauri/src/db/: history.rs  mod.rs  templates.rs
src/api/: billing.test.ts  billing.ts  session.test.ts  session.ts  types.ts  worker.test.ts  worker.ts
src/hooks/: useAnalytics.test.ts  useAnalytics.ts  useAuth.ts  useBatch.test.ts  useBatch.ts  useDynamicCodes.test.ts  useDynamicCodes.ts  useExport.test.ts  useExport.ts  useFeatureAccess.test.ts  useFeatureAccess.ts  useHistory.test.ts  useHistory.ts  usePlatform.test.ts  usePlatform.ts  useQrGenerator.test.ts  useQrGenerator.ts  useResponsive.test.ts  useResponsive.ts  useTauriDragDrop.test.ts  useTauriDragDrop.ts  useTemplates.test.ts  useTemplates.ts  useUpdateCheck.test.ts  useValidation.test.ts  useValidation.ts
src/lib/: formatters.test.ts  imageOptimizer.test.ts  imageOptimizer.ts  platform.ts  scanHelpers.ts
src/platform/: types.ts
src/stores/: authStore.test.ts  authStore.ts  batchStore.test.ts  batchStore.ts  qrStore.ts  (+3 more)
(+51 files in other folders)
